# Cancer-Institute-Management

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.agents/: AGENTS.md
.agents/rules/: GEMINI.md
backend/: .env  .env.example  alembic.ini  pyproject.toml  seed_admin.py  service-account.json
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/api/v1/ai/: routes.py
backend/app/api/v1/auth/: dependencies.py  routes.py  schemas.py
backend/app/api/v1/clinical/: routes.py  schemas.py
backend/app/api/v1/patients/: routes.py  schemas.py
backend/app/api/v1/reports/: routes.py  schemas.py
backend/app/api/v1/research/: routes.py
backend/app/api/v1/share/: routes.py
backend/app/api/v1/system/: routes.py
backend/app/core/: __init__.py  celery_app.py  config.py  permissions.py  security.py
backend/app/db/: __init__.py  seed.py  session.py
backend/app/models/: __init__.py  audit.py  base.py  clinical.py  document.py  patient.py  research.py  user.py
backend/app/services/: ai.py  audit.py  patient.py  pdf.py  upload_service.py
backend/app/storage/: __init__.py  cloudinary_client.py  gcs_client.py
backend/app/tests/: conftest.py  test_auth.py  test_clinical_api.py  test_health.py  test_rbac.py  test_storage.py
docs/: README.md  architecture-decisions.md  architecture.md  er-diagram.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
(+52 files in other folders)
