[project]
name = "cancer-institute-platform"
version = "0.1.0"
description = "Cancer Institute Management & AI Research Platform Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "passlib[argon2]>=1.7.4",
    "celery>=5.4.0",
    "redis>=5.0.8",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-python-jose>=3.3.4.20240106",
    "types-passlib>=1.7.7.20240327"
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "ARG", "PTH"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "alembic"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["app/tests"]
asyncio_mode = "auto"
